@@ -159,6 +159,7 @@ public:
 	BOOL m_fAlternateRender;
 	int m_DeadZ;
 	BOOL m_fAlwaysDrawLightCenters;
+   BOOL m_fThrowBalls;
 
 	int m_securitylevel;
 
